frontend/src/styles/index.scss
@use "./reset.scss";
@use "./fonts.scss";
@use "./code.scss";

/* splitting out different "layers" of css? maybe once this file gets "too unwieldy" */
/* theres other ways to split out css: per component, as mixins, etc */
/* @use "./layout.scss"; */
/* @use "./spacing.scss"; */
/* @use "./theme.scss"; */
/* @use "./colors.scss"; */
/* @use "./animation.scss"; */

@use "./util.scss" as *;

:root {
	--font-default:
		"Atkinson Hyperlegible", Inter, system-ui, Avenir, Helvetica, Arial,
		sans-serif;
	--font-mono: "Iosevka Zesty", "Courier New", Courier, monospace;
	--color-fg1: 255, 255, 255;
	--color-fg2: 238, 238, 238;
	--color-fg3: 221, 221, 221;
	--color-fg4: 204, 204, 204;
	--color-fg5: 170, 170, 170;
	--color-bg1: 12, 16, 18;
	--color-bg2: 23, 28, 31;
	--color-bg3: 34, 41, 44;
	--color-bg4: 48, 58, 61;
	--color-sep: 55, 67, 69;
	--color-link: 177, 140, 243;
	font: 16px/1.3 var(--font-default);
	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	color: var(--color-fg);
	background-color: var(--color-bg);
}

::selection {
	background-color: #3fa9c988;
}

#root {
	display: flex;
	height: 100vh;
	background-color: $bg2;
	color: $fg2;
}

#root > nav {
	width: 16rem;
	background-color: $bg1;
	color: $fg2;
	overflow-y: auto;
	display: flex;
	flex-direction: column;

	& > ul {
		padding: 0.25rem;
		display: flex;
		flex-direction: column;
	}

	& li {
		margin-top: 0.025rem;
	}

	& a {
		display: block;
		width: 100%;
		padding: 2px 4px;
		background-color: none;
		text-decoration: none;
		color: inherit;

		&.active {
			background-color: $bg3;
		}

		&:hover, &:focus {
			background-color: $bg4;
		}

		&.closed {
			color: $sep;
		}

		&.unread {
			font-weight: bold;
		}
	}

	& li > ul {
		margin-left: 1.5rem;
	}
}

button, input[type="submit"] {
	padding: 0 0.25rem;
	background-color: $bg3;
	cursor: pointer;

	&:hover, &:focus {
		background-color: $bg4;
	}
}

.home {
	flex: 1;
	background-color: $bg2;
	color: $fg2;
	padding: 1rem;
	overflow-y: auto;

	& button {
		margin: 2px 0;
	}
}

.room-home {
	flex: 1;
	background-color: $bg2;
	color: $fg2;
	padding: 1rem;
	overflow-y: auto;

	& .thread {
		contain: content;
		background-color: $bg3;
		margin: 8px 0;
		border: solid 1px $sep;
		max-width: 800px;

		& > header {
			display: flex;
			flex-direction: column;
			padding: 4px 8px;
			cursor: pointer;
			border-bottom: solid 1px $sep;

			& > .top {
				display: flex;
				align-items: center;
				gap: 8px;

				& > .icon {
					background-color: $bg4;
					height: 16px;
					width: 16px;
					border-radius: 50%;
				}

				& > .spacer {
					@include truncate;
					flex: 1;
				}

				/* TODO: use actual <time> */
				& > .time {
					color: $fg3;
				}
			}
		}

		& > .preview > details {
			padding: 0.25rem;
			cursor: pointer;
			appearance: details;
		}

		& > footer {
			cursor: pointer;
			text-align: center;
		}
	}
}

.chat {
	flex: 1;
	background-color: $bg2;
	color: $fg2;
	display: grid;
	grid-template-rows: 1fr 0;
	contain: strict;

	& > .input {
		position: absolute;
		bottom: 0;
		width: 100%;
		background-image: linear-gradient(to top, $bg2 25%, transparent);
		display: flex;
		flex-direction: column;
		padding: 4px;
		max-height: 50%;
		
		& > .reply {
			display: flex;

			& > .info {
				padding: 0 4px;
				background-color: rgba(var(--color-bg1), 0.8);
				flex: 1;
				border: solid 1px $sep;
			}

			& > .cancel {
				width: 124px;
				border: solid 1px $sep;
				background-color: $bg2;
			}
		}

		& > .attachments {
			padding-left: 124px;
		}

		& > .text {
			display: flex;
			
			& > .upload {
				width: 124px;
				padding: 0 4px;
				background: $bg3;
				border: solid $bg4 1px;
				cursor: pointer;

				&:hover {
					background: $bg2;
				}

				& > input[type="file"] {
					display: none;
				}
			}
		
			& > .editor {
				flex: 1;
				box-shadow: 2px 2px 8px #1114;
			}
		}
	}

	& > .list {
		display: flex;
		flex-direction: column;
		overflow-y: auto;

		& header {
			grid-column: span 3;
			position: sticky;
			z-index: 1;
			top: 0;
			padding: 0 144px;
			background-color: $bg3;
			margin-bottom: 4px;
			box-shadow: 0 2px 8px $bg2;
		}

		& > li {
			display: grid;
			grid-template-columns: 128px 1fr max-content;

			&:not(.message) {
				overflow-anchor: none;
			}

			&.unread-marker {
				box-shadow: 4px 0 0 -1px inset #3fa9c9;
				background-color: #3fa9c922;
				color: #3fa9c9;
				margin: 8px 0;

				& > .content {
					grid-column: 2;
				}
			}

			&.selected {
				box-shadow: 4px 0 0 -1px inset #67dc82;
				background-color: #67dc8222;
			}

			&.context {
				box-shadow: 4px 0 0 -1px inset #cc1856;
				background-color: #cc185622;
			}

			&.header {
				display: contents;
			}
		}
	}

	& > .loading {
		position: absolute;
		top: 8px;
		left: 8px;
		padding: 8px;
		background: $bg1;
		z-index: 100;
	}
}

.editor {
	background-color: $bg3;
	flex: 1;
	border: solid 1px $sep;
	padding: 0 4px;
	white-space: pre-wrap;
	overflow-y: auto;

	&.disabled {
		background-color: $bg4;
	}

	& .placeholder {
		position: absolute;
		color: $fg4;
	}

	& .syn {
		color: $fg5;
	}
}

h1 {
	font-size: 1.5rem;
}

h2 {
	font-size: 1.5rem;
}

h3 {
	font-size: 1.3rem;
}

strong {
	font-weight: bold;
}

s {
	text-decoration: strikethrough;
}

li, p {
	white-space: pre-wrap;
}

pre, code {
	background-color: #22282a;
	font-family: var(--font-mono);
}

pre {
	overflow-x: auto;
	padding: 4px;
	white-space: pre;
}

a {
	color: $link;
	text-decoration: underline;
	cursor: pointer;
}

.select-all {
	user-select: all;
}

em {
	font-style: italic;
}

.markdown {
	& ul, ol {
		white-space: normal;
	}

	& li {
		list-style-position: inside;
	}

	& ul > li {
		list-style-type: disc;
	}

	& ol > li {
		list-style-type: numbered;
	}
}

.modal {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	display: grid;
	place-items: center;

	& > .bg {
		position: absolute;
		animation: popup-bg 120ms linear forwards;
		width: 100%;
		height: 100%;
	}

	& > .content {
		position: absolute;

		& > .base {
			position: absolute;
			animation: popup-base 150ms cubic-bezier(0.42, 1.31, 0.52, 1.09) forwards;
			background-color: $bg2;
			border: solid 1px $sep;
			width: 100%;
			height: 100%;
		}

		& > .inner {
			animation: popup-content 100ms cubic-bezier(0.33, 1.05, 0.39, 0.92)
				forwards;
			padding: 8px;
			color: $fg3;
			max-width: 500px;
			min-width: 100px;
			min-height: 50px;
		}
	}
}

@keyframes popup-bg {
	from {
		background-color: #1110;
	}
	to {
		background-color: #111a;
	}
}

@keyframes popup-content {
	from {
		translate: 0 6px;
		opacity: 0.5;
	}
	to {
		translate: 0 0;
		opacity: 1;
	}
}

@keyframes popup-base {
	from {
		scale: 0.9;
		box-shadow: 0 0 0 #1110;
	}
	to {
		scale: 1;
		box-shadow: 4px 4px 8px #111f;
	}
}

.contextmenu {
	position: fixed;
	pointer-events: none;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	overflow-y: auto;
	scrollbar-width: none;
	z-index: 1;

	& > .inner {
		position: absolute;
		pointer-events: auto;
		padding-bottom: 8px;
	}
}

menu {
	background-color: $bg3;
	border: solid 1px $sep;
	box-shadow: 2px 2px 8px $bg1;
	color: $fg4;
	overflow: hidden;
	min-width: 128px;

	& button {
		border: none;
		padding: 2px 8px;
		width: 100%;
		text-align: left;

		&:hover, &:focus {
			background-color: rgba(var(--color-bg1), 0.5);
		}
	}

	& .submenu {
		padding: 0 8px;
		width: max-content;
	}

	& .subtext {
		color: $fg5;
		font-size: 0.8rem;
		margin-top: -4px;
	}

	& hr {
		border: none;
		height: 1px;
		background-color: $bg4;
	}
}

input[type="text"] {
	background-color: $bg3;
	border: solid 1px $sep;
}

.settings {
	flex: 1;
	background-color: $bg2;
	color: $fg2;
	display: grid;
	grid-template-rows: auto 1fr;
	grid-template-columns: 144px 1fr;

	& > header {
		grid-column: span 2 / span 2;
		background-color: $bg3;
		border-bottom: solid 1px $sep;
		padding: 0.5rem;
	}

	& > nav {
		background-color: $bg3;
		padding: 0.25rem;

		& button {
			width: 100%;
			background-color: none;

			&:hover, &:focus {
				background-color: $bg4;
			}

			&.selected {
				background-color: $bg3;
			}
		}
	}

	& > main {
		padding: 0.25rem;
		overflow-y: auto;
	}

	& button.spaced {
		margin-left: 4px;
	}
}

.message {
	display: grid;
	grid-template-columns: 128px 1fr max-content;
	
	&:hover {
		& > * {
			background-color: rgba(var(--color-bg1), 0.3);
		}

		& > .timestamp {
			visibility: visible;
		}
	}

	&.reply {
		grid-template-rows: auto auto;
	}

	& .author {
		@include truncate;
		cursor: pointer;
		color: $fg4;
		text-align: right;
		padding: 0 8px;
		position: sticky;
		top: 64px;

		&:hover, &:focus {
			text-decoration: underline;
		}

		&.override-name {
			color: #9ca9db;
		}
	}

	& > .reply {
		color: $fg5;
		font-size: 0.8rem;
		cursor: pointer;

		& > .author {
			position: static;
			padding: 0;
			padding-right: 8px;
		}
		
		&:hover {
			color: $fg4;
		}

		&.arrow {
			text-align: right;
			padding-right: 4px;
		}

		&.reply-content {
			@include truncate;
		}
	}

	& > .content {
		padding-right: 8px;
		display: flex;
		flex-direction: column;
		align-items: start;
		min-width: 0;

		& > .body {
			overflow: hidden;
			max-width: 100%;

			&.local {
				color: $fg5;
			}
		}

		& .edited {
			color: $fg5;
			font-size: 0.8rem;
		}
	}

	& > .timestamp {
		visibility: hidden;
		color: $fg4;
	}
}

.dim {
	color: $fg5;
	font-size: 0.8rem;
}

.tooltip {
	top: 0;
	left: 0;

	& > .base {
		position: absolute;
		background-color: $bg2;
		border: solid 1px $sep;
		animation: popup-base 150ms cubic-bezier(0.42, 1.31, 0.52, 1.09) forwards;
		width: 100%;
		height: 100%;
	}

	& > .inner {
		padding: 8px;
		color: $fg3;
		animation: popup-content 100ms cubic-bezier(0.33, 1.05, 0.39, 0.92)
			forwards;
		max-width: 500px;
		min-width: 100px;
		min-height: 50px;
	}

	&.interactive {
		/* TODO: make safe area use a variable */
		/* (and use more variables in general) */
		padding: 8px;
		margin: -8px;

		& > .base {
			height: calc(100% - 16px);
			width: calc(100% - 16px);
		}
	}

	&:not(.animate) {
		& > .base {
			animation-duration: 0s;
		}

		& > .inner {
			animation-duration: 0s;
		}
	}
}

#overlay {
	position: fixed;
	z-index: 1;
}

.tooltip .user {
	min-width: 200px;
}

.attachments {
	display: flex;

	& > li {
		background-color: $bg3;
		padding: 4px;
	}
}

.input li .media {
	max-height: min(30vh, 500px);
}

.room-members {
	width: 196px;
	background: $bg1;
	padding: 4px;

	& > li {
		@include truncate;
	}
}

.media {
	contain: content;
	max-height: min(50vh, 600px);
	aspect-ratio: var(--aspect-ratio);
	
	& .inner {
		max-width: min(600px, 50vw);
		aspect-ratio: var(--aspect-ratio);
	}

	& .loader {
		padding: 8px;
		background-color: $bg1;
		font-family: var(--font-mono);
		max-height: 100%;
		max-width: 100%;
		height: var(--height);
		width: var(--width);
		
		&:before {
			content: "";
			animation: loading .4s linear infinite;
		}
	}

	& img, video {
		display: block;
		position: fixed;
		top: 0;
		left: 0;
		height: 100%;
		width: 100%;
	}
}

@keyframes loading {
	0%   { content: "⠋ "; }
	11%  { content: "⠙ "; }
	23%  { content: "⠹ "; }
	33%  { content: "⠸ "; }
	44%  { content: "⠼ "; }
	55%  { content: "⠴ "; }
	66%  { content: "⠦ "; }
	77%  { content: "⠧ "; }
	88%  { content: "⠇ "; }
	100% { content: "⠏ "; }
}

